@@ -13,7 +13,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.*;
 
 /**
@@ -93,8 +92,8 @@ class NotificationCommandServiceTest {
     void shouldBatchUpdate_WhenEmptyLists() {
         // Given
         UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
-        updateDto.setReadIds(Arrays.asList());
-        updateDto.setDeletedIds(Arrays.asList());
+        updateDto.setReadIds(List.of());
+        updateDto.setDeletedIds(List.of());
 
         // When
         notificationCommandService.batchUpdate(userDetails, updateDto);
@@ -109,6 +108,147 @@ class NotificationCommandServiceTest {
     void shouldBatchUpdate_WhenNullDto() {
         // Given
         UpdateNotificationDTO updateDto = null;
+
+        // When
+        notificationCommandService.batchUpdate(userDetails, updateDto);
+
+        // Then
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verifyNoMoreInteractions(notificationCommandPort);
+    }
+
+    @Test
+    @DisplayName("알림 일괄 업데이트 - null 사용자")
+    void shouldBatchUpdate_WhenNullUser() {
+        // Given
+        CustomUserDetails nullUserDetails = null;
+        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
+        updateDto.setReadIds(Arrays.asList(1L, 2L));
+        updateDto.setDeletedIds(List.of(3L));
+
+        // When
+        notificationCommandService.batchUpdate(nullUserDetails, updateDto);
+
+        // Then
+        verify(notificationCommandPort, times(1)).batchUpdate(nullUserDetails, updateDto);
+        verifyNoMoreInteractions(notificationCommandPort);
+    }
+
+    @Test
+    @DisplayName("알림 일괄 업데이트 - 대량 데이터")
+    void shouldBatchUpdate_WhenLargeDataSet() {
+        // Given
+        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
+        List<Long> largeReadIds = Arrays.asList(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L, 9L, 10L);
+        List<Long> largeDeletedIds = Arrays.asList(11L, 12L, 13L, 14L, 15L, 16L, 17L, 18L, 19L, 20L);
+        updateDto.setReadIds(largeReadIds);
+        updateDto.setDeletedIds(largeDeletedIds);
+
+        // When
+        notificationCommandService.batchUpdate(userDetails, updateDto);
+
+        // Then
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verifyNoMoreInteractions(notificationCommandPort);
+    }
+
+    @Test
+    @DisplayName("알림 일괄 업데이트 - 음수 ID 값")
+    void shouldBatchUpdate_WhenNegativeIds() {
+        // Given
+        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
+        List<Long> readIds = Arrays.asList(-1L, -2L);
+        List<Long> deletedIds = Arrays.asList(-3L, -4L);
+        updateDto.setReadIds(readIds);
+        updateDto.setDeletedIds(deletedIds);
+
+        // When
+        notificationCommandService.batchUpdate(userDetails, updateDto);
+
+        // Then
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verifyNoMoreInteractions(notificationCommandPort);
+    }
+
+    @Test
+    @DisplayName("알림 일괄 업데이트 - 0 값 ID")
+    void shouldBatchUpdate_WhenZeroIds() {
+        // Given
+        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
+        List<Long> readIds = List.of(0L);
+        List<Long> deletedIds = List.of(0L);
+        updateDto.setReadIds(readIds);
+        updateDto.setDeletedIds(deletedIds);
+
+        // When
+        notificationCommandService.batchUpdate(userDetails, updateDto);
+
+        // Then
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verifyNoMoreInteractions(notificationCommandPort);
+    }
+
+    @Test
+    @DisplayName("알림 일괄 업데이트 - 매우 큰 ID 값")
+    void shouldBatchUpdate_WhenVeryLargeIds() {
+        // Given
+        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
+        List<Long> readIds = Arrays.asList(Long.MAX_VALUE, Long.MAX_VALUE - 1);
+        List<Long> deletedIds = Arrays.asList(Long.MAX_VALUE - 2, Long.MAX_VALUE - 3);
+        updateDto.setReadIds(readIds);
+        updateDto.setDeletedIds(deletedIds);
+
+        // When
+        notificationCommandService.batchUpdate(userDetails, updateDto);
+
+        // Then
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verifyNoMoreInteractions(notificationCommandPort);
+    }
+
+    @Test
+    @DisplayName("알림 일괄 업데이트 - 중복 ID 값")
+    void shouldBatchUpdate_WhenDuplicateIds() {
+        // Given
+        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
+        List<Long> readIds = Arrays.asList(1L, 1L, 2L, 2L, 3L);
+        List<Long> deletedIds = Arrays.asList(4L, 4L, 5L);
+        updateDto.setReadIds(readIds);
+        updateDto.setDeletedIds(deletedIds);
+
+        // When
+        notificationCommandService.batchUpdate(userDetails, updateDto);
+
+        // Then
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verifyNoMoreInteractions(notificationCommandPort);
+    }
+
+    @Test
+    @DisplayName("알림 일괄 업데이트 - read와 delete ID가 겹치는 경우")
+    void shouldBatchUpdate_WhenReadAndDeleteIdsOverlap() {
+        // Given
+        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
+        List<Long> readIds = Arrays.asList(1L, 2L, 3L);
+        List<Long> deletedIds = Arrays.asList(2L, 3L, 4L); // 2L, 3L이 중복
+        updateDto.setReadIds(readIds);
+        updateDto.setDeletedIds(deletedIds);
+
+        // When
+        notificationCommandService.batchUpdate(userDetails, updateDto);
+
+        // Then
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verifyNoMoreInteractions(notificationCommandPort);
+    }
+
+    @Test
+    @DisplayName("알림 일괄 업데이트 - 둘 다 null인 경우")
+    void shouldBatchUpdate_WhenBothListsAreNull() {
+        // Given
+        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
+        updateDto.setReadIds(null);
+        updateDto.setDeletedIds(null);
 
         // When
         notificationCommandService.batchUpdate(userDetails, updateDto);
